RESOLVED FIXED211535
Give the DFG and FTL WorkList threads more stack space on ASAN builds.
https://bugs.webkit.org/show_bug.cgi?id=211535
Summary Give the DFG and FTL WorkList threads more stack space on ASAN builds.
Mark Lam
Reported 2020-05-06 15:17:42 PDT
This is because ASAN is a memory hungry beast, and we want the ASAN builds to get to exercise the same amount of code a regular build will (instead of failing out early with a stack overflow error).
Attachments
proposed patch. (7.37 KB, patch)
2020-05-06 16:08 PDT, Mark Lam
no flags
proposed patch. (7.29 KB, patch)
2020-05-06 16:15 PDT, Mark Lam
no flags
Radar WebKit Bug Importer
Comment 1 2020-05-06 15:18:05 PDT
Mark Lam
Comment 2 2020-05-06 16:08:30 PDT
Created attachment 398678 [details] proposed patch.
Geoffrey Garen
Comment 3 2020-05-06 16:13:43 PDT
/Volumes/Data/worker/macOS-Mojave-Release-Build-EWS/build/Source/WTF/wtf/Threading.cpp:48:46: error: unused parameter 'threadType' [-Werror,-Wunused-parameter]
Mark Lam
Comment 4 2020-05-06 16:15:31 PDT
Created attachment 398680 [details] proposed patch.
Geoffrey Garen
Comment 5 2020-05-06 16:26:53 PDT
Comment on attachment 398680 [details] proposed patch. r=me
Alexey Proskuryakov
Comment 6 2020-05-06 16:33:08 PDT
Will you be rolling back r260692 separately?
Mark Lam
Comment 7 2020-05-06 16:34:25 PDT
(In reply to Alexey Proskuryakov from comment #6) > Will you be rolling back r260692 separately? Yes. Because there's another fix that I need to land first (work in progress). This bug is only 1 of 2 fixes.
Mark Lam
Comment 8 2020-05-07 12:28:45 PDT
(In reply to Mark Lam from comment #7) > (In reply to Alexey Proskuryakov from comment #6) > > Will you be rolling back r260692 separately? > > Yes. Because there's another fix that I need to land first (work in > progress). This bug is only 1 of 2 fixes. The SUPPRESS_ASAN has been undone in r261325 for https://webkit.org/b/211547.
Mark Lam
Comment 9 2020-05-07 12:29:09 PDT
Comment on attachment 398680 [details] proposed patch. Thanks for the review. Landing now.
EWS
Comment 10 2020-05-07 12:49:42 PDT
Committed r261328: <https://trac.webkit.org/changeset/261328> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398680 [details].
Note You need to log in before you can comment on or make changes to this bug.