Give the DFG and FTL WorkList threads more stack space on ASAN builds. https://bugs.webkit.org/show_bug.cgi?id=211535 <rdar://problem/62947884>

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

* dfg/DFGWorklist.cpp:
(JSC::DFG::Worklist::ThreadBody::ThreadBody):
- Mark the AutomaticThread as ThreadType::Compiler.

Source/WTF:

1. Add the ability to set the ThreadType for AutomaticThreads.
2. Give ThreadType::Compiler (which currently only used for the DFG anf FTL
   WorkList threads) a larger stack for OS(DARWIN) on ASAN builds.

   This is needed because ASAN is a memory hungry beast, and we want the ASAN
   builds to get to exercise the same amount of code a regular build will (instead
   of failing out early with a stack overflow error).

* wtf/AutomaticThread.cpp:
(WTF::AutomaticThread::AutomaticThread):
(WTF::AutomaticThread::start):
* wtf/AutomaticThread.h:
* wtf/Threading.cpp:
(WTF::stackSize):
* wtf/Threading.h:


Canonical link: https://commits.webkit.org/224494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261328 268f45cc-cd09-0410-ab3c-d52691b4dbfc